@startuml
class Utilisateur {
  -nom: String
  -prenom: String
  -email: String
  +afficher_competences(): List<Compétence>
  +indique_disponibilite(c: Creneau): boolean
}

class Compétence {
  -nom: String
  +afficher(): String
}

class Créneau {
  -date: Date
  -disponible: boolean
  +réserver(): boolean
}

class Echange {
  +afficher_détails(): String
}

Utilisateur "1" -- "*" Compétence : possède >
Utilisateur "1" -- "*" Créneau : disponible_pour >
Echange "1" -- "1" Utilisateur : offert par >
Echange "1" -- "1" Utilisateur : reçu par >
Echange "*" -- "1" Compétence : utilise >
Echange "1" -- "1" Créneau : se_deroule_sur >

@enduml

